--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>소비 기록 웹사이트</title>
     <style>
-        /* 탭 스타일 */
+        /* 스타일 추가 */
+        body {
+            font-family: Arial, sans-serif;
+        }
         .tab {
             display: inline-block;
             padding: 10px 20px;
@@ -18,7 +21,6 @@
             background-color: #f4978e;
             color: white;
         }
-        /* 콘텐츠 스타일 */
         .content {
             display: none;
             margin-top: 20px;
@@ -26,13 +28,27 @@
         .content.active {
             display: block;
         }
+        #loginForm {
+            margin: 20px 0;
+        }
     </style>
 </head>
 <body>
     <h1>소비 기록 공유 웹사이트</h1>
 
+    <!-- 로그인 폼 -->
+    <div id="loginSection">
+        <h2>로그인</h2>
+        <form id="loginForm">
+            <label for="username">사용자 이름:</label>
+            <input type="text" id="username" name="username" required><br><br>
+            <button type="submit">로그인</button>
+        </form>
+        <div id="loginMessage"></div>
+    </div>
+
     <!-- 탭 메뉴 -->
-    <div id="tabs">
+    <div id="tabs" style="display: none;">
         <div class="tab active" onclick="showTab('myRecords')">내 소비 기록</div>
         <div class="tab" onclick="showTab('othersRecords')">남의 소비 보기</div>
         <div class="tab" onclick="showTab('celebrityRecords')">유명인 소비 보기</div>
@@ -41,7 +57,6 @@
     <!-- 각 탭에 따른 콘텐츠 -->
     <div id="myRecords" class="content active">
         <h2>내 소비 기록</h2>
-        <!-- 여기에 내 소비 기록 양식을 추가 -->
         <form id="purchaseForm">
             <label for="item">물건 이름:</label>
             <input type="text" id="item" name="item" required><br><br>
@@ -54,31 +69,36 @@
 
     <div id="othersRecords" class="content">
         <h2>남의 소비 보기</h2>
-        <!-- 다른 사람들의 소비 기록을 표시할 콘텐츠 -->
         <p>다른 사람들이 올린 소비 기록이 여기에 표시됩니다.</p>
     </div>
 
     <div id="celebrityRecords" class="content">
         <h2>유명인 소비 보기</h2>
-        <!-- 유명인들의 소비 기록을 표시할 콘텐츠 -->
         <p>유명인들이 구매한 아이템이 여기에 표시됩니다.</p>
     </div>
 
     <script>
+        // 로그인 처리
+        document.getElementById('loginForm').addEventListener('submit', function(event) {
+            event.preventDefault();
+            const username = document.getElementById('username').value;
+            document.getElementById('loginSection').style.display = 'none'; // 로그인 섹션 숨기기
+            document.getElementById('tabs').style.display = 'block'; // 탭 메뉴 보이기
+            document.getElementById('loginMessage').innerText = `${username}님, 환영합니다!`;
+        });
+
         // 탭을 전환하는 함수
         function showTab(tabId) {
-            // 모든 탭과 콘텐츠를 초기화
             const tabs = document.querySelectorAll('.tab');
             const contents = document.querySelectorAll('.content');
             tabs.forEach(tab => tab.classList.remove('active'));
             contents.forEach(content => content.classList.remove('active'));
 
-            // 선택된 탭과 콘텐츠만 활성화
             document.querySelector(`.tab[onclick="showTab('${tabId}')"]`).classList.add('active');
             document.getElementById(tabId).classList.add('active');
         }
 
-        // 내 소비 기록에 아이템 추가하는 코드 (이전 코드와 동일)
+        // 내 소비 기록에 아이템 추가하는 코드
         document.getElementById('purchaseForm').addEventListener('submit', function(event) {
             event.preventDefault();
             const itemName = document.getElementById('item').value;
