--- a/index.html
+++ b/index.html
@@ -7,13 +7,17 @@
     <style>
         body {
             font-family: Arial, sans-serif;
+            background-image: url('https://img.freepik.com/free-vector/crumpled-paper-texture_1048-2259.jpg?semt=ais_hybrid'); /* 여기에 원하는 이미지의 URL을 넣어주세요 */
+            background-size: cover; /* 이미지 크기를 화면에 맞게 조정 */
+            background-position: center; /* 이미지를 중앙에 배치 */
+            color: white; /* 텍스트 색상 조정 (필요에 따라 변경) */
         }
         .tab {
             display: inline-block;
             padding: 10px 20px;
             margin-right: 5px;
             cursor: pointer;
-            background-color: #ddd;
+            background-color: rgba(255, 255, 255, 0.7); /* 반투명 배경 */
             border-radius: 5px;
         }
         .tab.active {
@@ -23,6 +27,9 @@
         .content {
             display: none;
             margin-top: 20px;
+            background-color: rgba(255, 255, 255, 0.8); /* 콘텐츠 반투명 배경 */
+            padding: 20px;
+            border-radius: 10px;
         }
         .content.active {
             display: block;
