--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-image: url('https://img.freepik.com/free-vector/crumpled-paper-texture_1048-2259.jpg?semt=ais_hybrid'); /* 여기에 원하는 이미지의 URL을 넣어주세요 */
+            background-image: url('your-image-url.jpg'); /* 여기에 원하는 이미지의 URL을 넣어주세요 */
             background-size: cover; /* 이미지 크기를 화면에 맞게 조정 */
             background-position: center; /* 이미지를 중앙에 배치 */
-            color: white; /* 텍스트 색상 조정 (필요에 따라 변경) */
+            color: black; /* 텍스트 색상을 검은색으로 변경 */
         }
         .tab {
             display: inline-block;
@@ -66,7 +66,18 @@
 
     <div id="celebrityRecords" class="content">
         <h2>유명인 소비 보기</h2>
-        <p>유명인들이 구매한 아이템이 여기에 표시됩니다.</p>
+        <div id="celebrityTabs">
+            <div class="tab" onclick="showCelebrityTab('binzi')">빈지노</div>
+            <div class="tab" onclick="showCelebrityTab('gominsi')">고민시</div>
+        </div>
+        <div id="binzi" class="content" style="display:none;">
+            <h3>빈지노의 소비 기록</h3>
+            <p>빈지노의 소비 기록이 여기에 표시됩니다.</p>
+        </div>
+        <div id="gominsi" class="content" style="display:none;">
+            <h3>고민시의 소비 기록</h3>
+            <p>고민시의 소비 기록이 여기에 표시됩니다.</p>
+        </div>
     </div>
 
     <script>
@@ -77,8 +88,24 @@
             tabs.forEach(tab => tab.classList.remove('active'));
             contents.forEach(content => content.classList.remove('active'));
 
-            document.querySelector(`.tab[onclick="showTab('${tabId}')"]`).classList.add('active');
-            document.getElementById(tabId).classList.add('active');
+            if (tabId === 'celebrityRecords') {
+                document.getElementById('celebrityTabs').querySelectorAll('.tab').forEach(tab => tab.classList.remove('active'));
+                document.getElementById('celebrityRecords').classList.add('active');
+            } else {
+                document.querySelector(`.tab[onclick="showTab('${tabId}')"]`).classList.add('active');
+                document.getElementById(tabId).classList.add('active');
+            }
+        }
+
+        // 유명인 탭 전환 함수
+        function showCelebrityTab(celebrityId) {
+            const celebrityTabs = document.querySelectorAll('#celebrityTabs .tab');
+            const celebrityContents = document.querySelectorAll('#celebrityRecords .content');
+            celebrityTabs.forEach(tab => tab.classList.remove('active'));
+            celebrityContents.forEach(content => content.style.display = 'none');
+
+            document.querySelector(`#celebrityTabs .tab[onclick="showCelebrityTab('${celebrityId}')"]`).classList.add('active');
+            document.getElementById(celebrityId).style.display = 'block';
         }
 
         // 내 소비 기록에 아이템 추가하는 코드
