--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-image: url('your-image-url.jpg'); /* 여기에 원하는 이미지의 URL을 넣어주세요 */
+            background-image: url('https://img.freepik.com/free-vector/crumpled-paper-texture_1048-2259.jpg?semt=ais_hybrid'); /* 여기에 원하는 이미지의 URL을 넣어주세요 */
             background-size: cover; /* 이미지 크기를 화면에 맞게 조정 */
             background-position: center; /* 이미지를 중앙에 배치 */
             color: black; /* 텍스트 색상을 검은색으로 변경 */
