--- a/index.html
+++ b/index.html
@@ -6,161 +6,110 @@
     <title>소비 기록 웹사이트</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            background-image: url('https://img.freepik.com/free-vector/crumpled-paper-texture_1048-2259.jpg?semt=ais_hybrid'); /* 배경 이미지 변경 */
-            background-size: cover; /* 이미지 크기를 화면에 맞게 조정 */
-            background-position: center; /* 이미지를 중앙에 배치 */
-            color: black; /* 텍스트 색상을 검은색으로 변경 */
+            background-image: url('https://img.freepik.com/free-vector/crumpled-paper-texture_1048-2259.jpg?semt=ais_hybrid');
+            color: black; /* 모든 글씨 색을 검은색으로 */
         }
-        .tab {
-            display: inline-block;
-            padding: 10px 20px;
-            margin-right: 5px;
-            cursor: pointer;
-            background-color: rgba(255, 255, 255, 0.7); /* 반투명 배경 */
-            border-radius: 5px;
+        #content {
+            text-align: center;
+            position: relative;
         }
-        .tab.active {
-            background-color: #f4978e;
-            color: white;
-        }
-        .content {
+        #myPurchases {
             display: none;
+        }
+        #celebrity {
+            display: none;
+        }
+        #beenzino {
+            display: none;
+            position: relative;
             margin-top: 20px;
-            background-color: rgba(255, 255, 255, 0.8); /* 콘텐츠 반투명 배경 */
-            padding: 20px;
+        }
+        #beenzino img {
+            width: 300px;
+            height: auto;
             border-radius: 10px;
         }
-        .content.active {
-            display: block;
-        }
-        .celebrity-image {
-            display: block;
-            margin: 0 auto; /* 중앙 정렬 */
-            width: 200px; /* 사진 크기 조정 */
-            height: auto;
-            position: relative; /* 절대 위치 지정 */
-        }
         .item {
-            display: block;
-            position: absolute; /* 절대 위치로 배치 */
-            text-align: center; /* 텍스트 중앙 정렬 */
-            width: 100px; /* 애장템 이미지 크기 조정 */
-        }
-        .item img {
-            width: 100%; /* 애장템 이미지 크기 조정 */
+            position: absolute;
+            width: 100px;
             height: auto;
             border-radius: 5px;
         }
-        /* 애장템 위치 설정 */
-        .item1 { top: -30px; left: -30px; } /* 왼쪽 위 */
-        .item2 { bottom: -30px; left: -30px; } /* 왼쪽 아래 */
-        .item3 { top: -30px; right: -30px; } /* 오른쪽 위 */
-        .item4 { bottom: -30px; right: -30px; } /* 오른쪽 아래 */
-        /* 점선 스타일 설정 */
-        .dashed-line {
+        #item1 { top: 0; left: 0; }
+        #item2 { top: 0; right: 0; }
+        #item3 { bottom: 0; left: 0; }
+        #item4 { bottom: 0; right: 0; }
+        .line {
             position: absolute;
-            border-top: 1px dashed black;
-            width: 200px; /* 빈지노 사진 크기 */
-            transform: translateY(40px);
+            border: 2px dashed black; /* 두꺼운 검은색 점선 */
         }
-        .dashed-line.left { left: -100px; }
-        .dashed-line.right { right: -100px; }
-        .dashed-line.top { top: 0; }
-        .dashed-line.bottom { bottom: 0; }
+        .line1 { top: 50px; left: 30%; width: 40%; }
+        .line2 { left: 30%; top: 200px; width: 20%; }
+        .line3 { top: 200px; left: 30%; width: 40%; }
+        .line4 { left: 200px; top: 50px; width: 40%; }
     </style>
 </head>
 <body>
-    <h1>소비 기록 공유 웹사이트</h1>
+    <h1>소비 기록 웹사이트</h1>
+    <nav>
+        <button onclick="showTab('myPurchases')">내 소비 기록</button>
+        <button onclick="showTab('otherPurchases')">남의 소비 보기</button>
+        <button onclick="showTab('celebrity')">유명인 소비 보기</button>
+    </nav>
 
-    <!-- 탭 메뉴 -->
-    <div id="tabs">
-        <div class="tab active" onclick="showTab('myRecords')">내 소비 기록</div>
-        <div class="tab" onclick="showTab('othersRecords')">남의 소비 보기</div>
-        <div class="tab" onclick="showTab('celebrityRecords')">유명인 소비 보기</div>
-    </div>
-
-    <!-- 각 탭에 따른 콘텐츠 -->
-    <div id="myRecords" class="content active">
-        <h2>내 소비 기록</h2>
-        <form id="purchaseForm">
-            <label for="item">물건 이름:</label>
-            <input type="text" id="item" required><br><br>
-            <label for="link">구매 링크:</label>
-            <input type="url" id="link" required><br><br>
-            <label for="image">이미지 URL:</label>
-            <input type="url" id="image" required><br><br>
-            <label for="description">간단한 설명:</label>
-            <input type="text" id="description" required><br><br>
-            <button type="submit">추가하기</button>
-        </form>
-        <div id="myPurchaseList"></div>
-    </div>
-
-    <div id="othersRecords" class="content">
-        <h2>남의 소비 보기</h2>
-        <p>다른 사람들이 올린 소비 기록이 여기에 표시됩니다.</p>
-    </div>
-
-    <div id="celebrityRecords" class="content">
-        <h2>유명인 소비 보기</h2>
-        <div id="celebrityTabs">
-            <div class="tab" onclick="showCelebrityTab('binzi')">빈지노</div>
-            <div class="tab" onclick="showCelebrityTab('gominsi')">고민시</div>
+    <div id="content">
+        <div id="myPurchases">
+            <h2>내 소비 기록</h2>
+            <form id="purchaseForm">
+                <input type="text" id="name" placeholder="물건 이름" required>
+                <input type="text" id="link" placeholder="구매 링크" required>
+                <input type="text" id="image" placeholder="이미지 URL" required>
+                <input type="text" id="description" placeholder="간단한 설명" required>
+                <button type="submit">추가</button>
+            </form>
+            <div id="myPurchaseList"></div>
         </div>
-        <div id="binzi" class="content" style="display:none;">
-            <h3>빈지노의 소비 기록</h3>
-            <img class="celebrity-image" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQWZ2TGb-QCe3c1k20TeKJevDfXPz_OzylUDQ&s" alt="빈지노의 사진"> <!-- 빈지노 사진 URL -->
-            <div class="item item1"><img src="https://c1.klipartz.com/pngpicture/393/232/sticker-png-heart-apple-watch-series-4-apple-watch-series-3-smartwatch-apple-watch-series-1-iphone-watchos-5-electrocardiography.png" alt="애장템1"><p>애장템 1</p></div>
-            <div class="item item2"><img src="https://c0.klipartz.com/pngpicture/982/863/gratis-png-dubai-clothes-iron-panasonic-descuentos-en-precios-y-descuentos-electrodomesticos-para-el-hogar-thumbnail.png" alt="애장템2"><p>애장템 2</p></div>
-            <div class="item item3"><img src="https://c0.klipartz.com/pngpicture/308/842/sticker-png-t-shirt-logo-font-product-sleeve-dirt-bike-baby-clothes-tshirt-logo-active-shirt-black-top-thumbnail.png" alt="애장템3"><p>애장템 3</p></div>
-            <div class="item item4"><img src="https://c0.klipartz.com/pngpicture/216/537/sticker-png-mury-baby-clothes-ltda-me-doll-stuffed-animals-cuddly-toys-pink-patchwork-miscellaneous-blue-thumbnail.png" alt="애장템4"><p>애장템 4</p></div>
 
-            <!-- 점선 연결 -->
-            <div class="dashed-line left top"></div>
-            <div class="dashed-line left bottom"></div>
-            <div class="dashed-line right top"></div>
-            <div class="dashed-line right bottom"></div>
+        <div id="otherPurchases">
+            <h2>남의 소비 보기</h2>
+            <!-- 다른 소비 기록이 표시될 영역 -->
         </div>
-        <div id="gominsi" class="content" style="display:none;">
-            <h3>고민시의 소비 기록</h3>
-            <p>고민시의 소비 기록이 여기에 표시됩니다.</p>
+
+        <div id="celebrity">
+            <h2>유명인 소비 보기</h2>
+            <button onclick="showCelebrity('beenzino')">빈지노</button>
+            <div id="beenzino">
+                <h3>빈지노의 소비</h3>
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQWZ2TGb-QCe3c1k20TeKJevDfXPz_OzylUDQ&s" alt="빈지노의 사진">
+                <div class="line line1"></div>
+                <div class="line line2"></div>
+                <div class="line line3"></div>
+                <div class="line line4"></div>
+                <img id="item1" class="item" src="https://c1.klipartz.com/pngpicture/393/232/sticker-png-heart-apple-watch-series-4-apple-watch-series-3-smartwatch-apple-watch-series-1-iphone-watchos-5-electrocardiography.png" alt="애장템 1">
+                <img id="item2" class="item" src="https://c0.klipartz.com/pngpicture/982/863/gratis-png-dubai-clothes-iron-panasonic-descuentos-en-precios-y-descuentos-electrodomesticos-para-el-hogar-thumbnail.png" alt="애장템 2">
+                <img id="item3" class="item" src="https://c0.klipartz.com/pngpicture/308/842/sticker-png-t-shirt-logo-font-product-sleeve-dirt-bike-baby-clothes-tshirt-logo-active-shirt-black-top-thumbnail.png" alt="애장템 3">
+                <img id="item4" class="item" src="https://c0.klipartz.com/pngpicture/216/537/sticker-png-mury-baby-clothes-ltda-me-doll-stuffed-animals-cuddly-toys-pink-patchwork-miscellaneous-blue-thumbnail.png" alt="애장템 4">
+            </div>
         </div>
     </div>
 
     <script>
-        // 탭을 전환하는 함수
-        function showTab(tabId) {
-            const tabs = document.querySelectorAll('.tab');
-            const contents = document.querySelectorAll('.content');
-            tabs.forEach(tab => tab.classList.remove('active'));
-            contents.forEach(content => content.classList.remove('active'));
+        function showTab(tab) {
+            document.getElementById('myPurchases').style.display = 'none';
+            document.getElementById('otherPurchases').style.display = 'none';
+            document.getElementById('celebrity').style.display = 'none';
 
-            if (tabId === 'celebrityRecords') {
-                document.getElementById('celebrityTabs').querySelectorAll('.tab').forEach(tab => tab.classList.remove('active'));
-                document.getElementById('celebrityRecords').classList.add('active');
-            } else {
-                document.querySelector(`.tab[onclick="showTab('${tabId}')"]`).classList.add('active');
-                document.getElementById(tabId).classList.add('active');
-            }
+            document.getElementById(tab).style.display = 'block';
         }
 
-        // 유명인 탭 전환 함수
-        function showCelebrityTab(celebrityId) {
-            const celebrityTabs = document.querySelectorAll('#celebrityTabs .tab');
-            const celebrityContents = document.querySelectorAll('#celebrityRecords .content');
-            celebrityTabs.forEach(tab => tab.classList.remove('active'));
-            celebrityContents.forEach(content => content.style.display = 'none');
-
-            document.querySelector(`#celebrityTabs .tab[onclick="showCelebrityTab('${celebrityId}')"]`).classList.add('active');
-            document.getElementById(celebrityId).style.display = 'block';
+        function showCelebrity(celebrity) {
+            document.getElementById('beenzino').style.display = 'block';
         }
 
-        // 내 소비 기록에 아이템 추가하는 코드
+        // 소비 기록 추가하기
         document.getElementById('purchaseForm').addEventListener('submit', function(event) {
             event.preventDefault();
-            const itemName = document.getElementById('item').value;
-           
+            const itemName = document.getElementById('name').value;
             const itemLink = document.getElementById('link').value;
             const itemImage = document.getElementById('image').value;
             const itemDescription = document.getElementById('description').value;
