--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>소비 기록 웹사이트</title>
+    <title>Real ME</title>
     <style>
         body {
             background-image: url('https://img.freepik.com/free-vector/crumpled-paper-texture_1048-2259.jpg?semt=ais_hybrid');
@@ -34,14 +34,14 @@
         }
         .item {
             position: absolute;
-            width: 50px; /* 애장템 크기 절반으로 줄임 */
+            width: 20px; /* 애장템 크기 절반으로 줄임 */
             height: auto;
             border-radius: 5px;
         }
-        #item1 { top: 10%; left: 0; }
-        #item2 { top: 10%; right: 0; }
-        #item3 { bottom: 10%; left: 0; }
-        #item4 { bottom: 10%; right: 0; }
+        #item1 { top: -10%; left: 0; }
+        #item2 { top: -10%; right: 0; }
+        #item3 { bottom: -10%; left: 0; }
+        #item4 { bottom: -10%; right: 0; }
         .line {
             position: absolute;
             border: 2px dashed black; /* 두꺼운 검은색 점선 */
