--- a/index.html
+++ b/index.html
@@ -28,32 +28,32 @@
             margin-top: 20px;
         }
         #beenzino img, #gomin img {
-            width: 300px;
+            width: 200px;
             height: auto;
             border-radius: 10px;
         }
         .item {
             position: absolute;
             width: 20px; /* 애장템 크기 절반으로 줄임 */
-            height: auto;
+            height: 20px;
             border-radius: 5px;
         }
-        #item1 { top: -10%; left: 0; }
-        #item2 { top: -10%; right: 0; }
-        #item3 { bottom: -10%; left: 0; }
-        #item4 { bottom: -10%; right: 0; }
+        #item1 { top: -30%; left: 0; }
+        #item2 { top: -30%; right: 0; }
+        #item3 { bottom: -30%; left: 0; }
+        #item4 { bottom: -30%; right: 0; }
         .line {
             position: absolute;
             border: 2px dashed black; /* 두꺼운 검은색 점선 */
         }
-        .line1 { top: 50px; left: 0; width: 200px; transform: rotate(45deg); transform-origin: top left; }
-        .line2 { top: 50px; right: 0; width: 200px; transform: rotate(-45deg); transform-origin: top right; }
-        .line3 { bottom: 50px; left: 0; width: 200px; transform: rotate(45deg); transform-origin: bottom left; }
-        .line4 { bottom: 50px; right: 0; width: 200px; transform: rotate(-45deg); transform-origin: bottom right; }
+        .line1 { top: -100px; left: 0; width: 200px; transform: rotate(45deg); transform-origin: top left; }
+        .line2 { top: -100px; right: 0; width: 200px; transform: rotate(-45deg); transform-origin: top right; }
+        .line3 { bottom: 100px; left: 0; width: 200px; transform: rotate(45deg); transform-origin: bottom left; }
+        .line4 { bottom: 100px; right: 0; width: 200px; transform: rotate(-45deg); transform-origin: bottom right; }
     </style>
 </head>
 <body>
-    <h1>소비 기록 웹사이트</h1>
+    <h1>Real ME</h1>
     <nav>
         <button onclick="showTab('myPurchases')">내 소비 기록</button>
         <button onclick="showTab('otherPurchases')">남의 소비 보기</button>
