--- a/index.html
+++ b/index.html
@@ -38,18 +38,18 @@
             height: 20px;
             border-radius: 5px;
         }
-        #item1 { top: -30%; left: 0; }
-        #item2 { top: -30%; right: 0; }
-        #item3 { bottom: -30%; left: 0; }
-        #item4 { bottom: -30%; right: 0; }
+        #item1 { top: -30%; left: 10px; }
+        #item2 { top: -30%; right: 10px; }
+        #item3 { bottom: -30%; left: 10px; }
+        #item4 { bottom: -30%; right: 10px; }
         .line {
             position: absolute;
             border: 2px dashed black; /* 두꺼운 검은색 점선 */
         }
-        .line1 { top: -100px; left: 0; width: 200px; transform: rotate(45deg); transform-origin: top left; }
-        .line2 { top: -100px; right: 0; width: 200px; transform: rotate(-45deg); transform-origin: top right; }
-        .line3 { bottom: 100px; left: 0; width: 200px; transform: rotate(45deg); transform-origin: bottom left; }
-        .line4 { bottom: 100px; right: 0; width: 200px; transform: rotate(-45deg); transform-origin: bottom right; }
+        .line1 { top: 20%; left: 20%; width: 200px; transform: rotate(45deg); transform-origin: top left; }
+        .line2 { top: 20%; right: 20%; width: 200px; transform: rotate(-45deg); transform-origin: top right; }
+        .line3 { bottom: 20%; left: 20%; width: 200px; transform: rotate(45deg); transform-origin: bottom left; }
+        .line4 { bottom: 20%; right: 20%; width: 200px; transform: rotate(-45deg); transform-origin: bottom right; }
     </style>
 </head>
 <body>
