--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
             background-image: url('https://img.freepik.com/free-vector/crumpled-paper-texture_1048-2259.jpg?semt=ais_hybrid');
             color: black; /* 모든 글씨 색을 검은색으로 */
         }
+        img {
+            background-color: transparent; /* 이미지 배경을 투명하게 설정 */
+            display: block; /* 이미지가 블록 요소처럼 동작하도록 설정 */
+            margin: 0 auto; /* 이미지 중앙 정렬 */
+        }
         #content {
             text-align: center;
             position: relative;
@@ -38,10 +43,10 @@
             height: 20px;
             border-radius: 5px;
         }
-        #item1 { top: -30%; left: 200px; }
-        #item2 { top: -30%; right: 200px; }
-        #item3 { bottom: -30%; left: 200px; }
-        #item4 { bottom: -30%; right: 200px; }
+        #item1 { top: -30%; left: 250px; }
+        #item2 { top: -30%; right: 250px; }
+        #item3 { bottom: -30%; left: 250px; }
+        #item4 { bottom: -30%; right: 250px; }
         .line {
             position: absolute;
             border: 2px dashed black; /* 두꺼운 검은색 점선 */
